navbar changed to just icons, brewing page added

--- a/brewing.html
+++ b/brewing.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ryan Smith">
     <link rel="shortcut icon" href="./ico/favicon.ico">
 
-    <title>About Ryan</title>
+    <title>Brewing</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
@@ -43,8 +43,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li> 
-            <li class="active"><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
-            <li><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
+            <li><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
+            <li class="active"><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
             <li><a href="friends.html"><i title="friends" class="fa fa-users"></i></a></li>
             <li><a href="contact.html"><i title="contact" class="fa fa-phone"></i></a></li>
           </ul>
@@ -55,26 +55,17 @@
     <div class="container">
 
       <div class="basic">
-        <h1>General Information</h1>
-
-        <h3><i class="fa fa-coffee"></i> Work</h3>
-        <p>Currently I am working as a litigation paralegal focused on eDiscovery at <a href="https://www.bdiplaw.com">Bunsow De Mory Smith & Allison LLP</a>.</br>
-           I hold a BA in Philosophy from<a href="http://philosophy.ucsc.edu"> UC Santa Cruz</a> and a paralegal certificate from the <a href="http://extension.berkeley.edu/cert/paralegal.html">UC Berkeley Extension</a>.</br>
-           Previously I worked as a paralegal at the<a href="http://www.lanierlawfirm.com"> Lanier Law Firm</a>, an office manager in a small litigation office in San Jose, and as an event manager at the <a href="http://www.mountainwinery.com">Mountain Winery</a> in Saratoga.</p>
-        <p>For additional work related information, check out my<a href="https://www.linkedin.com/in/rysmith"> LinkedIn</a>.</p>
-
-        <h3><i class="fa fa-leaf"></i> Outside</h3>
-        <p>Snowboarding at Alpine</br>
-           Snowshoeing with A-Dub</br>
-           Disc Golf at De La</br>
-           Distance Running</p>
-
-         <h3><i class="fa fa-terminal"></i> Coding</h3>
-        <p>Bash scripting for law firms.</br>
-           Checkout my<a href="https://github.com/rysmith"> github</a> page.</p>
-        <p>Web Development.</br>
-           Here's my dad's website I built:  <a href="http://specialtytextures.com">Specialty Textures.</a>
-        <p>Hacking and/or breaking my Raspberry Pi. <i class="fa fa-linux"></i></p>
+        <h1>Brewing</h1>
+        <h3><i class="fa fa-beer"></i> Citra IPA</h3>
+           <p>Our best brew thus far is a citra hops IPA.</br>
+           1 hour boil.</br>
+           Add 1oz  warrior hops at 40min.</p>
+        <h3><i class="fa fa-beer"></i> Hose Water Ale</h3>
+           <p>Baydo and I made this shit with hose water. It tasted like shit.</br>
+           Add 1oz rice at 40min.</p>
+        <h3><i class="fa fa-beer"></i> Red Ale</h3>
+           <p>Baydo and I made this shit with hose water. It tasted like shit.</br>
+           Add 1oz rice at 40min.</p>
       </div>
 
     </div><!-- /.container -->
