--- a/friends.html
+++ b/friends.html
@@ -42,10 +42,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="active"><a href="#">Friends</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li> 
+            <li><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
+            <li><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
+            <li class="active"><a href="friends.html"><i title="friends" class="fa fa-users"></i></a></li>
+            <li><a href="contact.html"><i title="contact" class="fa fa-phone"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
