--- a/friends.html
+++ b/friends.html
@@ -44,6 +44,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="brewing.html">Brewing</a></li>
             <li class="active"><a href="#">Friends</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
