--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="brewing.html">Brewing</a></li>
             <li><a href="friends.html">Friends</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
