--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -55,7 +55,7 @@
     <div class="container">
 
       <div class="basic">
-         <ul class="nav nav-pils nav-horizontal">
+         <ul class="nav nav-pils">
           <li><a href="about.html"><h1><i class="fa fa-info-circle fa-fw"></i> About</h1></a></li>
           <li><a href="brewing.html"><h1><i class="fa fa-beer fa-fw"></i> Brewing</h1></a></li>
           <li><a href="friends.html"><h1><i class="fa fa-users fa-fw"></i> Friends</h1></a></li>
