add favicon to index, update brewing

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryan's Personal Site">
     <meta name="author" content="Ryan Smith">
-    <link rel="shortcut icon" href="./ico/favicon.ico">
+    <link rel="shortcut icon" href="./ico/s.ico">
 
     <title>Ryan Smith</title>
 
