--- a/brewing.html
+++ b/brewing.html
@@ -42,7 +42,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="brewing.html">Brewing</a></li>
             <li><a href="friends.html">Friends</a></li>
