--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="./css/material-wfont.css" rel="stylesheet">
     <link href="./font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
