updated theme, added some pics and backstretch.js

--- a/index.html
+++ b/index.html
@@ -6,20 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryan's Personal Site">
     <meta name="author" content="Ryan Smith">
-    <link rel="shortcut icon" href="./ico/favicon.ico">
+    <!-- <link rel="shortcut icon" href="./ico/favicon.ico"> -->
 
     <title>Ryan Smith</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/material-wfont.css" rel="stylesheet">
     <link href="./font-awesome/css/font-awesome.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles -->
     <link href="./css/stylesheet.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +26,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,15 +35,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ryansmith.io</a>
+          <a class="navbar-brand" href="#">Ryan Smith</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li> 
-            <li><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
-            <li><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
-            <li><a href="friends.html"><i title="friends" class="fa fa-users"></i></a></li>
-            <li><a href="contact.html"><i title="contact" class="fa fa-phone"></i></a></li>
+            <li class="active"><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li>
+            <li><a href="about.html"><i title="about" class="fa fa-info-circle fa-fw"></i> About</a></li>
+            <li><a href="work.html"><i title="work" class="fa fa-briefcase fa-fw"></i> Resume</a></li>
+            <li><a href="friends.html"><i title="friends" class="fa fa-users fa-fw"></i> Friends</a></li>
+            <li><a href="contact.html"><i title="contact" class="fa fa-phone fa-fw"></i> Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,13 +51,8 @@
 
     <div class="container">
 
-      <div class="basic">
-         <ul class="nav nav-pils">
-          <li><a href="about.html"><h1><i class="fa fa-info-circle fa-fw"></i> About</h1></a></li>
-          <li><a href="brewing.html"><h1><i class="fa fa-beer fa-fw"></i> Brewing</h1></a></li>
-          <li><a href="friends.html"><h1><i class="fa fa-users fa-fw"></i> Friends</h1></a></li>
-          <li><a href="contact.html"><h1><i class="fa fa-phone fa-fw"></i> Contact</h1></a></li>
-        </ul>
+      <div class="basic-center">
+        <h1><a href="./about.html">Welcome</a></h1>
       </div>
 
     </div><!-- /.container -->
@@ -71,6 +62,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.backstretch.min.js"></script>
+    <script>
+        $.backstretch("./img/IMG_0207.JPG");
+    </script>
   </body>
 </html>
