--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryan's Personal Site">
     <meta name="author" content="Ryan Smith">
-    <link rel="shortcut icon" href="./ico/favicon.ico">
+    <!-- <link rel="shortcut icon" href="./ico/favicon.ico"> -->
 
     <title>Friends</title>
 
@@ -14,11 +14,8 @@
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./font-awesome/css/font-awesome.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles -->
     <link href="./css/stylesheet.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,7 +26,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,15 +35,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ryansmith.io</a>
+          <a class="navbar-brand" href="index.html">Ryan Smith</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li> 
-            <li><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
-            <li><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
-            <li class="active"><a href="friends.html"><i title="friends" class="fa fa-users"></i></a></li>
-            <li><a href="contact.html"><i title="contact" class="fa fa-phone"></i></a></li>
+            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li>
+            <li><a href="about.html"><i title="about" class="fa fa-info-circle fa-fw"></i> About</a></li>
+            <li><a href="work.html"><i title="work" class="fa fa-briefcase fa-fw"></i> Resume</a></li>
+            <li class="active"><a href="friends.html"><i title="friends" class="fa fa-users fa-fw"></i> Friends</a></li>
+            <li><a href="contact.html"><i title="contact" class="fa fa-phone fa-fw"></i> Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,7 +53,8 @@
 
       <div class="basic">
         <h1>Friends and Family</h1>
-        <h3><i class="fa fa-home"></i> Construction & Property Management</h3>
+        <hr>
+        <h3><i class="fa fa-home"></i> Construction &amp; Property Management</h3>
           <p>If you need a reliable drywall contractor, call my dad.  He's been in the business for over 50 years, and is a complete bad ass.</br>
              Lee Smith at <a href="http://specialtytextures.com">Signature Textures</a></p>
           <p>If you're looking for a reliable and professional apartment management company that's always watching the bottom line, talk to Scott.</br>
@@ -64,17 +62,20 @@
         <h3><i class="fa fa-gavel"></i> Legal</h3>
           <p>Deposition tomorrow?  Need 5,000 pages blown back ASAP?  Call Shaun.</br>
              Shaun Sullivan at <a href="http://blackstonediscovery.com/">Blackstone Discovery</a></p>
-          <p>Looking for a <strong>simple</strong> cloud based document review platform that doesn't suck?  Try <a href=http://www.swaylaw.com/compel">Compel</a>.</br>
+          <p>Looking for a <strong>simple</strong> cloud based document review platform that doesn't suck?  Try <a href="http://www.swaylaw.com/compel">Compel</a>.</br>
              Need to easily search, find, and track your trial exhbits?  Try <a href="http://trexdb.com/">Trexdb</a>.</br>
              Want some sweet trial exhibit stickerts? <a href="http://www.trialexhibitstickers.com/pdfs/sample_swaylaw_stickers_2013.pdf">Get some!</a></br>
              Howard Loo at <a href="http://www.swaylaw.com/">Sway Law</a></p>
-        <h3><i class="fa fa-medkit"></i> Medical & Dental</h3>
+        <h3><i class="fa fa-medkit"></i> Medical &amp; Dental</h3>
           <p>Need a good looking dentist in the Santa Cruz area?  Dr. Drew is your man.</br>
              Jason Drew, DDS at <a href="http://aptosdentist.com/">Aptos Dental</a></br>
           <p>Let's say your leg has just been crushed by a big rock while your hiking.  Let's hope you bought a medical kit from my sister before you left.</br>
              Annie Smith at <a href="http://www.adventuremedicalkits.com">Adventure Medical Kits</a></p>
       </div>
-
+      <hr class="bottom-divider">
+      <footer>
+        <p>&copy; 2014 Ryan Smith</p>
+      </footer>
     </div><!-- /.container -->
 
 
@@ -82,6 +83,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.backstretch.min.js"></script>
+    <script>
+        $.backstretch("./img/IMG_0137.JPG");
+    </script>
   </body>
 </html>
