--- a/work.html
+++ b/work.html
@@ -6,19 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ryan's Personal Site">
     <meta name="author" content="Ryan Smith">
-    <link rel="shortcut icon" href="./ico/favicon.ico">
+    <!-- <link rel="shortcut icon" href="./ico/favicon.ico"> -->
 
-    <title>Brewing</title>
+    <title>Work</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./font-awesome/css/font-awesome.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Custom styles -->
     <link href="./css/stylesheet.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,7 +26,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,15 +35,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ryansmith.io</a>
+          <a class="navbar-brand" href="index.html">Ryan Smith</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li> 
-            <li><a href="about.html"><i title="about" class="fa fa-info-circle"></i></a></li>
-            <li class="active"><a href="brewing.html"><i title="brewing" class="fa fa-beer"></i></a></li>
-            <li><a href="friends.html"><i title="friends" class="fa fa-users"></i></a></li>
-            <li><a href="contact.html"><i title="contact" class="fa fa-phone"></i></a></li>
+            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i></a></li>
+            <li><a href="about.html"><i title="about" class="fa fa-info-circle fa-fw"></i> About</a></li>
+            <li class="active"><a href="work.html"><i title="work" class="fa fa-briefcase fa-fw"></i> Resume</a></li>
+            <li><a href="friends.html"><i title="friends" class="fa fa-users fa-fw"></i> Friends</a></li>
+            <li><a href="contact.html"><i title="contact" class="fa fa-phone fa-fw"></i> Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,20 +51,13 @@
 
     <div class="container">
 
-      <div class="basic">
-        <h1>Brewing</h1>
-        <h3><i class="fa fa-beer"></i> Citra IPA</h3>
-           <p>Our best brew thus far is a citra hops IPA.</br>
-           1 hour boil.</br>
-           Add 1oz  warrior hops at 40min.</p>
-        <h3><i class="fa fa-beer"></i> Hose Water Ale</h3>
-           <p>Baydo and I made this shit with hose water. It tasted like shit.</br>
-           Add 1oz rice at 40min.</p>
-        <h3><i class="fa fa-beer"></i> Red Ale</h3>
-           <p>Baydo and I made this shit with hose water. It tasted like shit.</br>
-           Add 1oz rice at 40min.</p>
+      <div class="basic-center">
+        <iframe src="./img/smith_res.pdf" width="850" height="1100" seamless></iframe>
       </div>
-
+      <hr class="bottom-divider">
+      <footer>
+        <p>&copy; 2014 Ryan Smith</p>
+      </footer>
     </div><!-- /.container -->
 
 
@@ -75,6 +65,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.backstretch.min.js"></script>
+    <script>
+        $.backstretch("./img/IMG_3025.JPG");
+    </script>
   </body>
 </html>
