fix typo in about and update readme with link

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
           <p>I hold a BA in Philosophy from<a href="http://philosophy.ucsc.edu"> UC Santa Cruz</a> and a paralegal certificate from the <a href="http://extension.berkeley.edu/cert/paralegal.html">UC Berkeley Extension</a>.</p>
           <h4>Previously...</h4>
           <ul>
-              <li>Senior litigation paralegal focused on eDiscovery at <a href="https://www.bdiplaw.com">Bunsow De Mory Smith &amp;c Allison LLP</a></li>
+              <li>Senior litigation paralegal focused on eDiscovery at <a href="https://www.bdiplaw.com">Bunsow De Mory Smith &amp; Allison LLP</a></li>
               <li>Paralegal at the<a href="http://www.lanierlawfirm.com"> Lanier Law Firm</a></li>
               <li>Office manager in a boutique litigation office in San Jose</li>
               <li>Event manager at the <a href="http://www.mountainwinery.com">Mountain Winery</a> in Saratoga.</li>
