updated welcome page

--- a/about.html
+++ b/about.html
@@ -64,20 +64,19 @@
               <li>Event manager at the <a href="http://www.mountainwinery.com">Mountain Winery</a> in Saratoga.</li>
           </ul>
           <p>For additional work related information, check out my<a href="https://www.linkedin.com/in/rysmith"> LinkedIn</a>, or my <a href="./work.html">resume</a>.</p>
-
+        <h3><i class="fa fa-terminal"></i> Coding</h3>
+          <h4>Web Development</h4>
+            A website for a law firm specializing in immigration: <a href="http://www.immigrationattorney-bwc.com">Law Offices of Bernadette Connolly</a>.<br>
+            Here's my dad's website I built:  <a href="http://specialtytextures.com">Specialty Textures.</a>
+          <h4>Other Stuff</h4>
+            I created a small suite of shell scripts to analyze incoming document productions.  The reports can be generated as plain text or as SQL input statements for easy loading into a database. Checkout the <a href="https://github.com/rysmith/litrpt-SQL"> github repo</a>.</p>
+          <p>I also enjoy hacking on my Raspberry Pi. <i class="fa fa-linux"></i></p>
         <h3><i class="fa fa-leaf"></i> Outside</h3>
         <p>Snowboarding at Alpine</br>
            Snowshoeing with A-Dub</br>
            Disc Golf at De La</br>
            Distance Running</p>
 
-         <h3><i class="fa fa-terminal"></i> Coding</h3>
-        <h4>Bash Scripting</h4>
-           Checkout my<a href="https://github.com/rysmith"> github</a> page.</p>
-        <h4>Web Development</h4>
-           A website for a law firm specializing in immigration: <a href="http://www.immigrationattorney-bwc.com">Law Offices of Bernadette Connolly</a>.<br>
-           Here's my dad's website I built:  <a href="http://specialtytextures.com">Specialty Textures.</a>
-        <p>Hacking and/or breaking my Raspberry Pi. <i class="fa fa-linux"></i></p>
       </div>
       <hr class="bottom-divider">
       <footer>
