--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
     <div class="container">
 
       <div class="basic-center">
-        <iframe src="./img/smith_res.pdf" width="850" height="1100" seamless></iframe>
+        <iframe src="./img/ryan_smith_resume.pdf" width="850" height="1100" seamless></iframe>
       </div>
       <hr class="bottom-divider">
       <footer>
