smaller img for index

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.backstretch.min.js"></script>
     <script>
-        $.backstretch("./img/IMG_0207.JPG");
+        $.backstretch("./img/IMG_0207_small.jpg");
     </script>
   </body>
 </html>
