reduced size for all background images

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.backstretch.min.js"></script>
     <script>
-        $.backstretch("./img/IMG_0044.JPG");
+        $.backstretch("./img/IMG_0044_small.jpg");
     </script>
   </body>
 </html>
