--- a/friends.html
+++ b/friends.html
@@ -85,7 +85,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.backstretch.min.js"></script>
     <script>
-        $.backstretch("./img/IMG_0137.JPG");
+        $.backstretch("./img/IMG_0137_small.jpg");
     </script>
   </body>
 </html>
