--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.backstretch.min.js"></script>
     <script>
-        $.backstretch("./img/IMG_0189.JPG");
+        $.backstretch("./img/IMG_0189_small.jpg");
     </script>
   </body>
 </html>
