--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery.backstretch.min.js"></script>
     <script>
-        $.backstretch("./img/IMG_3025.JPG");
+        $.backstretch("./img/IMG_3025_small.jpg");
     </script>
   </body>
 </html>
