fixed another typo

--- a/friends.html
+++ b/friends.html
@@ -57,7 +57,7 @@
           <p>If you need a reliable drywall contractor, call my dad.  He's been in the business for over 50 years, and is a complete bad ass.</br>
              Lee Smith at <a href="http://specialtytextures.com">Signature Textures</a></p>
           <p>If you're looking for a reliable and professional apartment management company that's always watching the bottom line, talk to Scott.</br>
-             Scott Safadi at <a href="http://calbaypm.com/">Cal Bay Property Mangement</a></p>
+             Scott Safadi at <a href="http://calbaypm.com/">Cal Bay Property Management</a></p>
         <h3><i class="fa fa-gavel"></i> Legal</h3>
           <p>Deposition tomorrow?  Need 5,000 pages blown back ASAP?  Call Shaun.</br>
              Shaun Sullivan at <a href="http://blackstonediscovery.com/">Blackstone Discovery</a></p>
