animate css added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Custom styles -->
     <link href="./css/stylesheet.css" rel="stylesheet">
 
+    <!-- Other styles -->
+    <link href="./css/animate.min.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -51,7 +54,7 @@
     <div class="container">
 
       <div class="basic-center">
-        <h1><a href="./about.html">Welcome</a></h1>
+        <h1 class="animated fadeInDown"><a href="./about.html">Welcome</a></h1>
       </div>
 
     </div><!-- /.container -->
