changed url to ryansmithwebdesign.com, updated to just business page, will move resume etc to ryansmith.io

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@
     <meta name="author" content="Ryan Smith">
     <!-- <link rel="shortcut icon" href="./ico/favicon.ico"> -->
 
-    <title>Contact Ryan</title>
+    <title>Contact</title>
 
     <!-- Vendor styles -->
-    <link href="bower_components/bootswatch/simplex/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootswatch/yeti/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="bower_components/animate.css/animate.min.css" rel="stylesheet">
 
@@ -37,12 +37,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">ryansmith.io</a>
+          <a class="navbar-brand" href="index.html">Ryan Smith</a>
         </div>
         <div class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
-            <li><a href="work.html"><i title="work" class="fa fa-briefcase fa-fw"></i> Resume</a></li>
-            <li><a href="friends.html"><i title="friends" class="fa fa-users fa-fw"></i> Friends</a></li>
+            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i> Home</a></li>
+            <li><a href="projects.html"><i title="projects" class="fa fa-briefcase fa-fw"></i> Projects</a></li>
             <li class="active"><a href="contact.html"><i title="contact" class="fa fa-phone fa-fw"></i> Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
