--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ryan Smith">
     <!-- <link rel="shortcut icon" href="./ico/favicon.ico"> -->
 
-    <title>Ryan Smith</title>
+    <title>Projects</title>
 
     <!-- Vendor styles -->
     <link href="bower_components/bootswatch/yeti/bootstrap.min.css" rel="stylesheet">
@@ -36,55 +36,35 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Ryan Smith</a>
+          <a class="navbar-brand" href="index.html">Ryan Smith</a>
         </div>
         <div class="collapse navbar-collapse pull-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i> Home</a></li>
-            <li><a href="projects.html"><i title="projects" class="fa fa-briefcase fa-fw"></i> Projects</a></li>
+            <li><a href="index.html"><i title="home" class="fa fa-home fa-fw"></i> Home</a></li>
+            <li class="active"><a href="projects.html"><i title="projects" class="fa fa-briefcase fa-fw"></i> Projects</a></li>
             <li><a href="contact.html"><i title="contact" class="fa fa-phone fa-fw"></i> Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
+    <div class="container white-bg">
 
+      <h3>Recent Projects</h3>
+      <h4>The Law Office of Daniel M. Shafer<br>
+        <small><a href="http://www.danshaferlaw.com">www.danshaferlaw.com</a></small></h4>
+      <p>The client had already purchased a domain name but had not yet built a site or a hosting provider.  He requested a clean, modern looking site.  He provided me with a business card and asked me to match the font style and color.  After a few round of reviews we had the site up and running within 2 weeks.  I also created email addresses using the @danshaferlaw.com URL and walked the client through setting up his email on Outlook as well as his iPhone.  This site was built with Bootstrap and as a result looks great on any device whether it be a large desktop, an iPad, or a smart phone.</p>
+      <h4>Law Offices of Bernadette Connolly<br>
+        <small><a href="http://www.immigrationattorney-bwc.com">www.immigrationattorney-bwc.com</a></small></h4>
+      <p>The client already had a website that they had built in-house.  They didn't have the internal resources to devote to having another site built, but they wanted something professional looking.  I managed the transfer from their previous hosting company, and got them up and running with a professional looking site.  Because they specialize in immigration law, I also set them up with a <a href="http://www.immigrationattorney-bwc.com/html/espanol/index_espanol.html">spanish mirror site</a>.  This site is optimized for mobile devices and works great on desktops and smartphones alike.</p>
+      <h4>Specialty Textures<br>
+        <small><a href="http://www.specialtytextures.com">www.specialtytextures.com</a></small></h4>
+      <p>Design and creation of a simple landing page for an drywall contstruction company focused on residential remodels.</p>
 
-    <div class="jumbotron">
-      <div class="container">
-
-        <div class="basic-jumbo">
-          <h1 class="animated fadeInDown">Ryan Smith</h1>
-            <p>Web Design for your small business</p>
-        </div>
-
-      </div><!-- /.container -->
-    </div> <!-- jumbotron -->
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h3><i class="fa fa-sitemap"></i> Site Creation &amp; Design</h3>
-          <p>I create websites for small businesses.  If you have a design idea already, I can implement it.  If you need guidance with the design, I can help there too.  I actively manage the hositing of sites for my clients as well as helping them with search engine optimiztion (SEO).  I can also set up email addresses at your domain name and walk you through getting set up on Outlook or your smartphone.  Checkout my <a href="projects.html">projects page</a> for a list of recent projects.
-        </div>
-        <div class="col-md-4">
-          <h3><i class="fa fa-mobile-phone"></i>  Mobile First</h3>
-          <p>I use <a href="http://getbootstrap.com">Twitter Bootstrap</a> as a starting poing for my projects.  It's mobile first, so there's no need to 'optimize your site for mobile.'  Many web designers charge extra to create a mobile site, but because it's baked right into the frontend framework, there's no extra charge passed down to the client.  Your site will look great on a large desktop, a mid-size device like an iPad, or a smaller smartphone.</p>
-        </div>
-        <div class="col-md-4">
-          <h3><i class="fa fa-envelope-o"></i> Contact</h3>
-          <p>The best way to reach me is via phone or email.<br>Tel: (408) 438-3257<br>Email: <a href="mailto:ryansmithwebdesign@gmail.com">ryansmithwebdesign@gmail.com</a></p>
-          <p>You can also connect with me via social media:</p>
-          <p><a href=https://www.linkedin.com/in/rysmith> Linkedin <i class="fa fa-linkedin-square"></i></a><br>
-          <a href=https://github.com/rysmith> GitHub <i class="fa fa-github-alt"></i></a></p>
-        </div>
-      </div>
       <hr class="bottom-divider">
       <footer>
         <p>&copy; 2014 Ryan Smith<span class="pull-right"><a href=https://www.linkedin.com/in/rysmith> <i class="fa fa-linkedin-square"></i></a> <a href=https://github.com/rysmith><i class="fa fa-github-alt"></i></p>
-      </footer>
+        </footer>
     </div><!-- /.container -->
-
-    </div> <!-- .container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -94,7 +74,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/jquery.backstretch.js"></script>
     <script>
-        $(".jumbotron").backstretch("./img/IMG_0207_small.jpg");
+        $.backstretch("./img/IMG_3025_small.jpg");
     </script>
   </body>
 </html>
